--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,8 +2,8 @@ sonar.projectKey=16fortis_cw_agent
 sonar.organization=16fortis
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=cw_agent
-#sonar.projectVersion=1.0
+sonar.projectName=cw_agent
+sonar.projectVersion=1.0
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
