change cwagent file

--- a/.ebextensions/upload-ssm.config
+++ b/.ebextensions/upload-ssm.config
@@ -5,7 +5,7 @@ container_commands:
       #!/bin/bash
 
       # Define the path to your CloudWatch Agent configuration file
-      CWAGENT_CONFIG_FILE="cw_parameter.config"
+      CWAGENT_CONFIG_FILE="cw_agent/.ebextensions/cw-parameter.config"
 
       # Define the SSM parameter name where the configuration will be stored
       SSM_PARAMETER_NAME="cwagent"
