--- a/.ebextensions/upload-ssm.config
+++ b/.ebextensions/upload-ssm.config
@@ -5,10 +5,10 @@ container_commands:
       #!/bin/bash
 
       # Define the path to your CloudWatch Agent configuration file
-      CWAGENT_CONFIG_FILE="cw_agent/.ebextensions/cw-parameter.config"
+      CWAGENT_CONFIG_FILE="cw-parameter.config"
 
       # Define the SSM parameter name where the configuration will be stored
-      SSM_PARAMETER_NAME="cwagent"
+      SSM_PARAMETER_NAME="cwagent-test"
 
       # Upload the configuration file to SSM Parameter Store
       if [ -f "$CWAGENT_CONFIG_FILE" ]; then
