--- a/.ebextensions/upload-ssm.config
+++ b/.ebextensions/upload-ssm.config
@@ -1,27 +1,31 @@
-# .ebextensions/02-upload-cwagent-config.config
 container_commands:
-  01_upload_cwagent_config:
+  01_debug_check:
     command: |
-      #!/bin/bash
+      echo "=== Debugging Information ==="
+      echo "Current working directory:"
+      pwd  # Print the current working directory
+      echo "Files in the current directory:"
+      ls -l  # List all files in the current directory
+      echo "============================="
+      
+  02_upload_cwagent_config:
+    command: |
+      # Define the name of your CloudWatch Agent configuration file
+      CWAGENT_CONFIG_FILE="./cw-parameter.config"
 
-      # Define the path to your CloudWatch Agent configuration file
-      CWAGENT_CONFIG_FILE="cw-parameter.config"
-
-      # Define the SSM parameter name where the configuration will be stored
-      SSM_PARAMETER_NAME="cwagent-test"
-
-      # Upload the configuration file to SSM Parameter Store
+      # Check if the file exists
       if [ -f "$CWAGENT_CONFIG_FILE" ]; then
-        echo "Uploading CloudWatch Agent configuration to SSM Parameter Store..."
+        echo "Found CloudWatch Agent configuration file."
 
+        # Proceed to upload the file to SSM Parameter Store
         aws ssm put-parameter \
-          --name "$SSM_PARAMETER_NAME" \
+          --name "cwagent-test" \
           --type "String" \
           --value "$(cat $CWAGENT_CONFIG_FILE)" \
           --overwrite
 
         echo "Upload completed successfully."
       else
-        echo "CloudWatch Agent configuration file not found: $CWAGENT_CONFIG_FILE"
+        echo "Error: CloudWatch Agent configuration file not found."
         exit 1
       fi
