--- a/.ebextensions/upload-ssm.config
+++ b/.ebextensions/upload-ssm.config
@@ -11,7 +11,7 @@ container_commands:
   02_upload_cwagent_config:
     command: |
       # Define the name of your CloudWatch Agent configuration file
-      CWAGENT_CONFIG_FILE="./cw-parameter.config"
+      CWAGENT_CONFIG_FILE="cw-agent/.ebextensions/cw-parameter.config"
 
       # Check if the file exists
       if [ -f "$CWAGENT_CONFIG_FILE" ]; then
