--- a/.platform/hooks/postdeploy/1-cwagent-depend.config
+++ b/.platform/hooks/postdeploy/1-cwagent-depend.config
@@ -4,7 +4,7 @@ packages:
 
 commands:
   01_start_collectd:
-    command: "systemctl start collectd.service"
+    command: "sudo systemctl start collectd.service"
     ignoreErrors: false
 
 files:
